--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-commerce-tutorial",
-  "version": "0.1.0",
+  "name": "scentique",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -18,20 +18,16 @@
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.23.4",
-    "@stripe/stripe-js": "^2.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.289.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "next": "14.0.0",
+    "next": "^14.0.4",
     "next-sanity": "^5.5.11",
     "react": "^18.2.0",
-    "react-dom": "^18",
     "react-hook-form": "^7.49.2",
-    "react-phone-input-2": "^2.15.1",
     "sharp": "^0.33.1",
-    "stripe": "^14.10.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "use-shopping-cart": "^3.1.8"
