--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/vision": "^3.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.289.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
