--- a/sanity/package.json
+++ b/sanity/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.18.1",
-    "styled-components": "^5.3.9",
-    "tailwindcss": "^3.4.10"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^3.0.1",
