--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-sanity": "^5.5.11",
     "react": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^5.4.0",
     "sharp": "^0.33.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
